// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiEmptyPrompt is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiEmptyPrompt testClass1 testClass2"
  data-test-subj="test subject string"
>
  <svg
    class="euiIcon euiIcon--xxLarge euiIcon--subdued euiIcon-isLoading"
    focusable="false"
    height="16"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
  <div
    class="euiSpacer euiSpacer--s"
  />
  <span
    class="euiTextColor euiTextColor--subdued"
  >
    <h2
      class="euiTitle euiTitle--medium"
    >
      Title
    </h2>
    <div
      class="euiSpacer euiSpacer--m"
    />
    <div
      class="euiText euiText--medium"
    >
      <p>
        Body
      </p>
    </div>
  </span>
  <div
    class="euiSpacer euiSpacer--l"
  />
  <div
    class="euiSpacer euiSpacer--s"
  />
  <div>
    Actions
  </div>
</div>
`;

exports[`EuiEmptyPrompt props actions renders alone 1`] = `
<div
  class="euiEmptyPrompt"
>
  <div
    class="euiSpacer euiSpacer--s"
  />
  actions
</div>
`;

exports[`EuiEmptyPrompt props actions renders an array 1`] = `
<div
  class="euiEmptyPrompt"
>
  <div
    class="euiSpacer euiSpacer--s"
  />
  <div
    class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentCenter euiFlexGroup--directionColumn euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      action1
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      action2
    </div>
  </div>
</div>
`;

exports[`EuiEmptyPrompt props body renders alone 1`] = `
<div
  class="euiEmptyPrompt"
>
  <span
    class="euiTextColor euiTextColor--subdued"
  >
    <div
      class="euiText euiText--medium"
    >
      body
    </div>
  </span>
</div>
`;

exports[`EuiEmptyPrompt props iconType renders alone 1`] = `
<div
  class="euiEmptyPrompt"
>
  <svg
    class="euiIcon euiIcon--xxLarge euiIcon--subdued euiIcon-isLoading"
    focusable="false"
    height="16"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
  <div
    class="euiSpacer euiSpacer--s"
  />
</div>
`;

exports[`EuiEmptyPrompt props title renders alone 1`] = `
<div
  class="euiEmptyPrompt"
>
  <span
    class="euiTextColor euiTextColor--subdued"
  >
    <div
      class="euiTitle euiTitle--medium"
    >
      title
    </div>
    <div
      class="euiSpacer euiSpacer--m"
    />
  </span>
</div>
`;
